<resources>
    <string name="app_name">招聘求职</string>

    <string name="tabBar_home">岗位</string>
    <string name="tabBar_company">公司</string>
    <string name="tabBar_message">消息</string>
    <string name="tabBar_mine">我的</string>

    <string name="empty_data">暂无数据</string>

    <!--登录页-->
    <string name="mobile_login">手机号登录</string>
    <string name="login_tip">未注册过的手机号将会自动创建账号</string>
    <string name="mobile_input_label">+86</string>
    <string name="mobile_input_hint">请输入手机号</string>
    <string name="smsCode_input_hint">请输入验证码</string>
    <string name="fetch_code">获取验证码</string>
    <string name="login_or_register">登录 / 注册</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_qq">QQ登录</string>

    <!--首页-->
    <string name="location">南宁</string>
    <string name="search_hint">搜索职位</string>
    <string name="mailing">立即投递</string>
    <string name="home_new">最新</string>
    <string name="home_recommend">推荐</string>
    <string name="home_filter">筛选</string>

    <!-- 公司 -->
    <string name="search">搜索&#8230;&#8230;&#8230;</string>
    <string name="company">公司</string>
    <string name="follow">关注</string>
    <string name="work_time">工作时间</string>
    <string name="weal">员工福利</string>
    <string name="official_website">公司官网</string>

    <!-- 消息页 -->
    <string name="message">消息</string>

    <!-- 搜索页面 -->
    <string name="search_text">搜索</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="search_like">猜你喜欢</string>

    <string name="filter_title1">招聘类型</string>
    <string name="filter_title2">学历要求</string>
    <string name="filter_title3">经验要求</string>
    <string name="filter_title4">薪资待遇</string>
    <string name="unlimited">不限</string>
    <string name="qz">全职</string>
    <string name="jz">兼职</string>
    <string name="edu_1">初中及以下</string>
    <string name="edu_2">中专/中技</string>
    <string name="edu_3">高中</string>
    <string name="edu_4">大专</string>
    <string name="edu_5">本科</string>
    <string name="edu_6">硕士</string>
    <string name="edu_7">博士</string>
    <string name="year_1">在校生</string>
    <string name="year_2">应届生</string>
    <string name="year_3">1年以内</string>
    <string name="year_4">1–3年</string>
    <string name="year_5">3–5年</string>
    <string name="year_6">5–10年</string>
    <string name="year_7">10年以上</string>
    <string name="salary_1">3K以下</string>
    <string name="salary_2">3–5K</string>
    <string name="salary_3">5–7K</string>
    <string name="salary_4">7–9K</string>
    <string name="salary_5">9–12K</string>
    <string name="salary_6">12K以上</string>
    <string name="confirm">确认</string>

    <!-- 个人中心页 -->
    <string name="mine_curriculum_file">简历附件</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_mailing">已投简历</string>
    <string name="mine_job_expect">管理求职意向</string>
    <string name="mine_home">个人主页</string>
    <string name="mine_follow">关注公司</string>
    <string name="mine_answer">常见问答</string>
    <string name="mine_help">帮助与反馈</string>

    <!-- 简历 -->
    <string name="resume">个人在线简历</string>
    <string name="personal_advantage">个人优势</string>
    <string name="job_expectations">求职期望</string>
    <string name="work_experience">工作经历</string>
    <string name="education_experience">教育经历</string>
    <string name="save">保存</string>
    <string name="edu_exp">教育经历</string>
    <string name="college">学校</string>
    <string name="edu">学历</string>
    <string name="major">专业</string>
    <string name="time_quantum">时间段</string>
    <string name="college_hint">请输入学校名称</string>
    <string name="edu_hint">请选择学历</string>
    <string name="major_hint">请填写专业名称</string>
    <string name="time_quantum_hint">请选择就读时间段</string>

</resources>