<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.HomeFragment">

        <!-- 顶部 -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0px">

            <org.kuro.recruit.view.toolbar.XCollapsingToolbarLayout
                android:id="@+id/home_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:scrimVisibleHeightTrigger="100dp">

                <!-- <androidx.appcompat.widget.AppCompatImageView-->
                <!--     android:layout_width="match_parent"-->
                <!--     android:layout_height="215dp"-->
                <!--     android:contentDescription="@string/tabBar_home"-->
                <!--     android:scaleType="centerCrop"-->
                <!--     app:layout_collapseMode="parallax"-->
                <!--     app:srcCompat="@mipmap/home_swipe" />-->

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:contentDescription="@string/tabBar_home"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/home_swipe" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/search_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:gravity="center"
                        android:paddingTop="28dp"
                        android:paddingEnd="15dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="8dp"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:drawableEndCompat="@drawable/icon_arrow_bottom" />

                        <EditText
                            android:id="@+id/search_input"
                            style="@style/search_input"
                            android:autofillHints="username"
                            tools:ignore="LabelFor" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </org.kuro.recruit.view.toolbar.XCollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <!-- 顶部 end -->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp">

                    <com.google.android.material.tabs.TabLayout
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        app:tabIndicatorFullWidth="false"
                        app:tabSelectedTextColor="@color/primary"
                        tools:ignore="RelativeOverlap">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_recommend"
                            android:textColor="@color/blackText3"
                            android:textSize="15sp" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_new"
                            android:textColor="@color/blackText3"
                            android:textSize="15sp" />
                    </com.google.android.material.tabs.TabLayout>

                    <!-- <com.google.android.material.button.MaterialButton-->
                    <!--     android:layout_width="50dp"-->
                    <!--     android:layout_height="36dp"-->
                    <!--     android:layout_alignParentEnd="true"-->
                    <!--     android:backgroundTint="#F4F4F4"-->
                    <!--     android:padding="0dp"-->
                    <!--     android:text="@string/home_filter"-->
                    <!--     android:textColor="@color/blackText3"-->
                    <!--     android:textSize="12sp" />-->
                    <TextView
                        android:id="@+id/filter_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/shape_tags"
                        android:paddingHorizontal="9dp"
                        android:paddingVertical="5dp"
                        android:text="@string/home_filter"
                        android:textColor="@color/blackText3"
                        android:textSize="12sp"
                        tools:ignore="RelativeOverlap"
                        tools:text="筛选" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>