<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CompanyDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 背景 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tabBar_company"
            android:scaleType="fitXY"
            android:src="@mipmap/company_detail_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- 背景 end -->

        <!-- 关注和返回 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="16dp"
                android:src="@drawable/icon_arrow_left"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shape_border_btn_white"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="3dp"
                    android:paddingVertical="3dp"
                    android:text="@string/follow"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/icon_plus3" />
            </LinearLayout>
        </RelativeLayout>
        <!-- 关注和返回 end -->

        <!-- 公司简介 -->
        <LinearLayout
            android:id="@+id/company_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/company_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="千库科技有限公司"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="上市公司 | 500~1000人 | 互联网"
                    android:textColor="@color/blackText3"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="千库网是国内深受用户欢迎的PNG图片素材网站，以“做设计，不
抠图”为口号，以免抠PNG元素为核心，衍生出背景图库设计模板、
艺术字库、原创插画、办公文档、视频音频等细分设计素材。网站
素材原创商用，快速下载，正版授权。"
                    android:textColor="@color/black_tag"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>
        <!-- 公司简介 end -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_info">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_time"
                android:textColor="@color/blackText3"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                android:text="上午9：00 - 下午5：00  双休  弹性工作制"
                android:textColor="@color/black_tag"
                android:textSize="12sp" />

            <View style="@style/default_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/weal"
                android:textColor="@color/blackText3"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/weal1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="五险一金"
                        android:textColor="@color/blackText3"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="缴纳养老保险、医疗保险、失业保险、工伤保险、生育保险和住房公积金"
                        android:textColor="@color/gray_tag"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/weal2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="带薪年假"
                        android:textColor="@color/blackText3"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="为员工提供带薪年假"
                        android:textColor="@color/gray_tag"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/weal3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="年终奖励"
                        android:textColor="@color/blackText3"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="年末给予员工年终奖励、分红，对一年来的工作业绩给予一定的肯定"
                        android:textColor="@color/gray_tag"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/default_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/official_website"
                android:textColor="@color/blackText3"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://588ku.com/"
                android:textColor="@color/textColor"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>